--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <main id="asee-main">
 
     <section class="asee-section row column">
+        <p style="text-align: center;"><span style="color: #0000ff;">Please share this Call for Participation!</span></p>
         <h3>Theme</h3>
         This year, our theme is <strong>Intent, Design, Solutions: Contexts in Engineering Education</strong>. We invite colleagues (faculty,
         researchers, graduate students, post-docs, and undergraduates) to join us in sharing their work and ideas about how
@@ -128,6 +129,7 @@
         <ul>
             <li>Early Bird (including Priority status) ends March 15, 2018 at 11:59pm EST.</li>
             <li>Regular ends April 11, 2018 at 11:59pm EST.</li>
+            <li>Registration link will be available on this website soon.</li>
         </ul>
     </section>
 
