--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <main id="asee-main">
 
     <section class="asee-section row column">
-        <p style="text-align: center;"><span style="color: #0000ff;">Please share this Call for Participation!</span></p>
+        <p style="text-align: center;"><a href="ASEE 2018 StL CFP.pdf">Please share this Call for Participation!</a></p>
         <h3>Theme</h3>
         This year, our theme is <strong>Intent, Design, Solutions: Contexts in Engineering Education</strong>. We invite colleagues (faculty,
         researchers, graduate students, post-docs, and undergraduates) to join us in sharing their work and ideas about how
