--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <!-- Banner -->
 <div class="asee-banner">
     <section class="row column text-center">
-        <h2>ASEE - St. Lawrence Section</h2>
+        <img src="assets/images/banner.png" />
+        <br>
+        <br>
         <h4>April 20 - 21, 2018</h4>
         <h4>Cornell University, Ithaca, NY</h4>
         <a class="success button show-for-small-only" href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;Registration will open soon</a>
