--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 
     <title>ASEE - St. Lawrence Section</title>
 
+    <!--Logos-->
+    <a herf="http://www.asee.org/"><img src="assets/images/global_asee_logo.gif"></a>
+    <font size="3">St. Lawrence Section of the American Society for Engineering Education</font>
+    <img src="assets/images/nysetaLogo.jpg" />
+    <font size="3">New York Cyber Security and Engineering Technology Association</font>
+
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +22,7 @@
 <header class="top-bar asee-header">
     <div class="top-bar-left">
         <ul class="dropdown medium-horizontal menu" data-dropdown-menu>
-            <li class="menu-text">ASEE 2017</li>
+            <li class="menu-text">ASEE 2018</li>
             <li class="asee-menu-option"><a href="#important-dates">Dates</a></li>
             <li class="asee-menu-option"><a href="#travel">Travel and Hotel</a></li>
         </ul>
@@ -31,11 +37,9 @@
 <!-- Banner -->
 <div class="asee-banner">
     <section class="row column text-center">
-        <img src="assets/images/banner.png" />
+        <img src="assets/images/ASEE_info_banner.png" width="900" height="900" />
         <br>
         <br>
-        <h4>April 20 - 21, 2018</h4>
-        <h4>Cornell University, Ithaca, NY</h4>
         <a class="success button show-for-small-only" href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;Registration will open soon</a>
     </section>
 </div>
@@ -44,10 +48,12 @@
 <main id="asee-main">
 
     <section class="asee-section row column">
-        <p style="text-align: center;"><a href="ASEE 2018 StL CFP.pdf">Please share this Call for Participation!</a></p>
+        <p style="text-align: center;"><a href="ASEE 2018 StL CFP.pdf"><b>Click here for full Call for Participation!</b></a></p>
+        <p style="text-align: center;"><a href="paper_abstract_submission.html"><b>Paper Abstract Submission Form</b></a></p>
+        <p style="text-align: center;"><a href="poster_abstract_submission.html"><b>Poster Abstract Submission Form</b></a></p>
         <h3>Theme</h3>
         This year, our theme is <strong>Intent, Design, Solutions: Contexts in Engineering Education</strong>. We invite colleagues (faculty,
-        researchers, graduate students, post-docs, and undergraduates) to join us in sharing their work and ideas about how
+        researchers, graduate students, post-docs, and undersgraduates) to join us in sharing their work and ideas about how
         contexts (or the lack of them) impact all aspects of engineering education.
     </section>
 
@@ -107,7 +113,7 @@
                 <td>Evening banquet with guest speakers.</td>
             </tr>
             <tr>
-                <td>March 21, 2018</td>
+                <td>April 21, 2018</td>
                 <td>Conference with keynote, paper/abstracts presenters, and poster sessions.</td>
             </tr>
             </tbody>
