Added Traci's changes from 2/16/18 email. Added travel info and conference venue. Needs some format tweaking.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <p style="text-align: center;"><a href="ASEE 2018 StL CFP.pdf"><b>Click here for full Call for Participation!</b></a></p>
         <p style="text-align: center;"><a href="paper_abstract_submission.html"><b>Paper Abstract Submission Form</b></a></p>
         <p style="text-align: center;"><a href="poster_abstract_submission.html"><b>Poster Abstract Submission Form</b></a></p>
+        <h3>Conference Venue</h3>
+        Cornell University, Upson Hall, 124 Hoy Road, Ithica, NY 14850<br>
+        <br>
         <h3>Theme</h3>
         This year, our theme is <strong>Intent, Design, Solutions: Contexts in Engineering Education</strong>. We invite colleagues (faculty,
         researchers, graduate students, post-docs, and undersgraduates) to join us in sharing their work and ideas about how
@@ -144,7 +147,20 @@
     <section class="asee-section row column">
         <h3 id="travel">Travel and Hotel</h3>
 
-        A block of rooms has been reserved at the Best Western University Inn in Ithaca. Information forthcoming soon on how to reserve rooms.
+        <bold>Conference Hotel</bold>:<br>
+        Best Western University INN, Ithica. Free Breakfast, free shuttle to Cornell University, and ADA accessible.<br>
+        https://www.bestwestern.com/en_US/book/hotel-rooms.33065.html?iata=00171880 <br>
+        <br>
+        To get the conference rate, you can book your room in one of two ways:<br>
+        <ol>
+            <li>Guests can call the hotel at 1-607-272-6100 and request the "ASEE" group rate.</li>
+            <li>Guests may also e-mail the hotel at <a href="mailto:ithacareservations@twintierhospitality.com"> ithacareservations@twintierhospitality.com </a></li>
+        </ol>
+        The block will be held until March 19, 2018.<br>
+        <br>
+        <bold>Traveling to Ithica, local highlights</bold><br>
+        <a href="http://www.visitithaca.com/travel-tips/getting-around">http://www.visitithaca.com/travel-tips/getting-around</a>
+
     </section>
 </main>
 
