Fixed three Ithaca mispells

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p style="text-align: center;"><a href="paper_abstract_submission.html"><b>Paper Abstract Submission Form</b></a></p>
         <p style="text-align: center;"><a href="poster_abstract_submission.html"><b>Poster Abstract Submission Form</b></a></p>
         <h3>Conference Venue</h3>
-        Cornell University, Upson Hall, 124 Hoy Road, Ithica, NY 14850<br>
+        Cornell University, Upson Hall, 124 Hoy Road, Ithaca, NY 14850<br>
         <br>
         <h3>Theme</h3>
         This year, our theme is <strong>Intent, Design, Solutions: Contexts in Engineering Education</strong>. We invite colleagues (faculty,
@@ -148,7 +148,7 @@
         <h3 id="travel">Travel and Hotel</h3>
 
         <bold>Conference Hotel</bold>:<br>
-        Best Western University INN, Ithica. Free Breakfast, free shuttle to Cornell University, and ADA accessible.<br>
+        Best Western University INN, Ithaca. Free Breakfast, free shuttle to Cornell University, and ADA accessible.<br>
         https://www.bestwestern.com/en_US/book/hotel-rooms.33065.html?iata=00171880 <br>
         <br>
         To get the conference rate, you can book your room in one of two ways:<br>
@@ -158,7 +158,7 @@
         </ol>
         The block will be held until March 19, 2018.<br>
         <br>
-        <bold>Traveling to Ithica, local highlights</bold><br>
+        <bold>Traveling to Ithaca, local highlights</bold><br>
         <a href="http://www.visitithaca.com/travel-tips/getting-around">http://www.visitithaca.com/travel-tips/getting-around</a>
 
     </section>
