Current index file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="top-bar-right hide-for-small-only">
         <ul class="menu">
-            <li><a class="success button" href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Registration will open soon&nbsp;</a></li>
+            <li><a class="success button" href="http://www.cse.buffalo.edu/~kds/asee/registration.html"><i class="fa fa-user-plus" aria-hidden="true"></i>Click Here to Register&nbsp;</a></li>
         </ul>
     </div>
 </header>
@@ -40,7 +40,7 @@
         <img src="assets/images/ASEE_info_banner.png" width="900" height="900" />
         <br>
         <br>
-        <a class="success button show-for-small-only" href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;Registration will open soon</a>
+        <a class="success button show-for-small-only" href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;Click Here to Register</a>
     </section>
 </div>
 
@@ -48,9 +48,12 @@
 <main id="asee-main">
 
     <section class="asee-section row column">
-        <p style="text-align: center;"><a href="ASEE 2018 StL CFP.pdf"><b>Click here for full Call for Participation!</b></a></p>
-        <p style="text-align: center;"><a href="paper_abstract_submission.html"><b>Paper Abstract Submission Form</b></a></p>
-        <p style="text-align: center;"><a href="poster_abstract_submission.html"><b>Poster Abstract Submission Form</b></a></p>
+        <p style="text-align: center;"><a href="ASEE_2018_StL_CFP.pdf"><b>Click here for full Call for Participation!</b></a></p>
+        <p style="text-align: center;"><b>Paper Abstract Submission Form (closed)</b></p>
+        <p style="text-align: center;"><b>Poster Abstract Submission Form (closed)</b></p>
+        <p style="text-align: center;"><b>Poster Abstracts (link coming soon)</b></p>
+        <p style="text-align: center;"><b>Full Papers (link coming soon)</b></p>
+        <p style="text-align: center;"><b>Final Program (link coming soon)</b></p>
         <h3>Conference Venue</h3>
         Cornell University, Upson Hall, 124 Hoy Road, Ithaca, NY 14850<br>
         <br>
